<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextPromotionDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_promotion_details" />

    <EditText
        android:id="@+id/editTextPromotionPoints"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:hint="@string/add_promotion_points">
    </EditText>

    <Button
        android:id="@+id/buttonAddPromotion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_promotion_submit" />

</LinearLayout>