<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/beacon_name"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/champagnebold"/>
        <TextView
            android:id="@+id/beaconName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/theboldfont"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/beacon_minor_name"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"
            />

        <TextView
            android:id="@+id/beaconMinor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/theboldfont"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/beacon_major_name"
            android:layout_marginStart="5dp"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/beaconMajor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/theboldfont"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</LinearLayout>